Fixed issue of scroll bar moving page elements when switching components by adding overflow-y: scroll to the html in sass

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,6 +18,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   background-color: $bodyBack;
   @media (max-width: 1300px) {
